--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     </header>
     <section id="about" class="animated bounce-in about_bg">
         <div class="bg-align">
-            <h1>Designer. Chris.</h1>
+            <h1>Editor. Chris.</h1>
             <p>My name is Chris, I’m a Full-time UI designer with an enduring interest in Coding, Taking pictures and Cycling. 
-            I live in China. Want to work together on something? Just follow my <a href="https://twitter.com/decohack" style="border-bottom: 1px solid #CCC;">Twitter</a>. And Make sure you have subscribed to my <a href="https://decohack.zhubai.love/" style="border-bottom: 1px solid #CCC;">Newsletter</a>.
+            I live in China. Want to work together on something? Just follow my <a href="https://twitter.com/ischriswong" style="border-bottom: 1px solid #CCC;">Twitter</a>. And Make sure you have subscribed to my <a href="https://decohack.zhubai.love/" style="border-bottom: 1px solid #CCC;">Newsletter</a>.
             </p>
-            <p>我是 王颖, 我是一个全职产品设计师，最感兴趣的事情是写代码，摄影和骑公路车，可以在我的 <a href="https://twitter.com/decohack" style="border-bottom: 1px solid #CCC;">Twitter</a> 上看到更多关于我的内容。 另外记得订阅我的周刊 <a href="https://decohack.zhubai.love/" style="border-bottom: 1px solid #CCC;">DecoHack</a>。
+            <p>我是 王颖, 我是一个全职视频剪辑师，最感兴趣的事情是弹吉他、摄影和骑山地车，可以在我的 <a href="https://m.weibo.cn/u/7104453221?uid=7104453221&t=userinfo&_T_WM=36f9012f60ee2c7d35d34678f78f35c7" style="border-bottom: 1px solid #CCC;">微博</a> 上看到更多关于我的内容。 如果想联系我请发邮件到我的 <a href="mailto:ischriswong@gmail.com" style="border-bottom: 1px solid #CCC;">邮箱</a>。
             </p>
             </div>
         </div>
