--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="bg-align">
             <h1>Editor. Chris.</h1>
             <p>My name is Chris, I’m a full-time Video Editor with an enduring passion for playing guitar, photography, and cycling. 
-            I live in China. If you want to work together on something, just follow my <a href="https://twitter.com/ischriswong" style="border-bottom: 1px solid #CCC;">Twitter</a>. And let’s talk via <a href="mailto:ischriswong@gmail.com" style="border-bottom: 1px solid #CCC;">Email</a>.
+            I live in China. If you want to work together on something, just follow my <a href="https://twitter.com/ischriswong" style="border-bottom: 1px solid #CCC;">Twitter</a>. And let’s talk via <a href="mailto:ischriswong@gmail.com" style="border-bottom: 1px solid #CCC;">email</a>.
             </p>
             <p>我是 王颖, 我是一个全职视频剪辑师，最感兴趣的事情是弹吉他、摄影和骑山地车，可以在我的 <a href="https://m.weibo.cn/u/7104453221?uid=7104453221&t=userinfo&_T_WM=36f9012f60ee2c7d35d34678f78f35c7" style="border-bottom: 1px solid #CCC;">微博</a> 上看到更多关于我的内容。 如果想联系我请发邮件到我的 <a href="mailto:ischriswong@gmail.com" style="border-bottom: 1px solid #CCC;">邮箱</a>。
             </p>
