--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>viggo - 404</title>
+    <title>chris - 404</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
     <link rel="shortcut icon" href="favicon.ico">
     <!-- baidu Analytice -->
@@ -211,7 +211,7 @@
             <h1>404</h1>
             <p>Oops! It looks like you're lost...</p>
             <p>The Page you're looking for doesn't exist or another error occurred.</p>
-            <p><a href="http://viggoz.com">👉  viggoz.com</a></p>
+            <p><a href="http://wangying.me">👉  wangying.me</a></p>
         </div>
     </section>
 </body>
